Housekeeping (#12)
* initial tests

* circleci java 8

* moar tests

* Added page test

* added book/books test

* utf8 fixes

* fixed mod formatting

* added more tests

* 100% coverage on core

* more refactorings

* save loader

* SA user data migration

* abstracted UI element calculations

* testing 11

* test

* changelog fix

* fixing server issues

* packet error

* SA config propagation

* removed redundant remote

* fix for server

* added migration handler

* Added migration to 1.10.2

* stripped 1.11 from SA as SA is not released for 1.11

* minor styling fixes

* changelog + readme

* added version info to the migration section in the readme

* removed texture reload

* added test resources and fixed commands

* fixed a lot of stuff

* added changelog

* making sure it builds

* configured working dirs

* added splash props

* Added fix for #8 in 1.7.10

* Fixed list string utf encoding

* added eula for good measure

* fixing formatting for windows

* build gradle username

* set default book colour

* fixed missing last page bug

* consolidating

* standardized list

* consolidated reload

* main command fix

* loder consolidation

* network agent consolidation

* fixing init

* tests passing

* more fixes

* ported changes to other versions

* updated changelog

* fixing import error

* fixes for 1.9.4 sp

* 1.9 fixes

* added 1.11 stuff

* fixed book formatting on windows

* custom chat formatting

* fixed encoding issues

* file loading charset fix

* fixed mod colour

* changelog / readme