@@ -37,6 +37,33 @@ minecraft {
     replaceIn "AchievementBooksMod.java"
 }
 
+runClient {
+    workingDir = "eclipse"
+    args = [
+            "--username",
+            "vsbmeza"
+    ]
+//    jvmArgs = [
+//            "-XX:+PrintGCDetails",
+//            "-XX:+PrintHeapAtGC",
+//            "-XX:+PrintTenuringDistribution"
+//    ]
+
+}
+
+runServer {
+    workingDir = "eclipse-server"
+    args = [
+            "-Dfml.ignoreInvalidMinecraftCertificates=true"
+
+    ]
+//    jvmArgs = [
+//            "-XX:+PrintGCDetails",
+//            "-XX:+PrintHeapAtGC",
+//            "-XX:+PrintTenuringDistribution"
+//    ]
+}
+
 group= "com.stateshifterlabs.achievementbooks"
 archivesBaseName = "achievementbooks"
 
